# RAGCircuit

./: .env.example  .gitignore  conftest.py  pyproject.toml
.github/workflows/: ci.yml  ingestion-job.yml  nightly-evals.yml
apps/eval-service/: Dockerfile  pyproject.toml
apps/eval-service/src/eval_service/: main.py
apps/ingestion-service/: Dockerfile  pyproject.toml
apps/ingestion-service/src/ingestion_service/: main.py
apps/ingestion-service/tests/: test_main.py
apps/rag-api/: Dockerfile  pyproject.toml
apps/rag-api/src/rag_api/: api.py
apps/rag-api/tests/: test_api.py
infra/: docker-compose.yml
infra/otel-collector/: config.yml
infra/prometheus/: prometheus.yml
libs/core-rag/: pyproject.toml
libs/core-rag/src/core_rag/: chunking.py  embeddings.py  llm.py  prompts.py  ranking.py  retrieval.py  tracing.py  types.py
libs/core-rag/tests/: test_chunking.py  test_prompts.py  test_ranking.py
