[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eval-service"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "core-rag",
    "ragas>=0.1",
    "datasets>=2.0",
    "httpx>=0.25",
]

[tool.hatch.build.targets.wheel]
packages = ["src/eval_service"]
